--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "responsive-react": "^5.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
